unpackaged/main/default/objects/Account/fields/AccountCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>AccountCaseSafeID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account CaseSafeID</label>
    <type>Text</type>
</CustomField>