unpackaged/main/default/objects/Account/fields/Active_Dormant__c.field-meta.xml
<CustomField>
    <fullName>Active_Dormant__c</fullName>
    <label>Active / Dormant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>