unpackaged/main/default/objects/Account/fields/ActiveSiteAccounts__c.field-meta.xml
<CustomField>
    <fullName>ActiveSiteAccounts__c</fullName>
    <description>Field to count number of active site accounts related to the parent account.</description>
    <inlineHelpText>Number of related active site accounts.</inlineHelpText>
    <label>Active Site Accounts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>