unpackaged/main/default/objects/Account/fields/AdminActionPick__c.field-meta.xml
<CustomField>
    <fullName>AdminActionPick__c</fullName>
    <description>Field is used to mark accounts for data cleanse</description>
    <inlineHelpText>Data Cleanse Use only</inlineHelpText>
    <label>Admin Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Keep</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>