unpackaged/main/default/objects/Account/fields/ADSKContractMgrExcludeFromMarketing__c.field-meta.xml
<CustomField>
    <fullName>ADSKContractMgrExcludeFromMarketing__c</fullName>
    <formula>AutodeskContractManager__r.Marketing_Exclude__c</formula>
    <label>Autodesk Contract Manager Excl Marketing</label>
    <type>Checkbox</type>
</CustomField>