unpackaged/main/default/objects/Account/fields/ADSKContractMgrFirstName__c.field-meta.xml
<CustomField>
    <fullName>ADSKContractMgrFirstName__c</fullName>
    <formula>AutodeskContractManager__r.FirstName</formula>
    <label>Autodesk Contract Manager First Name</label>
    <type>Text</type>
</CustomField>