unpackaged/main/default/objects/Account/fields/ADSKContractMgrFullName__c.field-meta.xml
<CustomField>
    <fullName>ADSKContractMgrFullName__c</fullName>
    <formula>AutodeskContractManager__r.FirstName + " " +  AutodeskContractManager__r.LastName</formula>
    <label>Autodesk Contract Manager Full Name</label>
    <type>Text</type>
</CustomField>