unpackaged/main/default/objects/Account/fields/Alta_CRM_ID__c.field-meta.xml
<CustomField>
    <fullName>Alta_CRM_ID__c</fullName>
    <externalId>true</externalId>
    <label>Alta CRM ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>