unpackaged/main/default/objects/Account/fields/Approved_Lease_Limit__c.field-meta.xml
<CustomField>
    <fullName>Approved_Lease_Limit__c</fullName>
    <label>Approved Lease Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>