unpackaged/main/default/objects/Account/fields/Assigned_Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Technical_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Technical Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>