unpackaged/main/default/objects/Account/fields/AutodeskContractManager__c.field-meta.xml
<CustomField>
    <fullName>AutodeskContractManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autodesk Contract Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Autodesk Contract Manager)</relationshipLabel>
    <relationshipName>AutodeskContractManagerAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>