unpackaged/main/default/objects/Account/fields/AutodeskContractManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>AutodeskContractManagerEmail__c</fullName>
    <formula>AutodeskContractManager__r.Email</formula>
    <label>Autodesk Contract Manager Email</label>
    <type>Text</type>
</CustomField>