unpackaged/main/default/objects/Account/fields/AutodeskContractManagerEmailOptOut__c.field-meta.xml
<CustomField>
    <fullName>AutodeskContractManagerEmailOptOut__c</fullName>
    <formula>AutodeskContractManager__r.HasOptedOutOfEmail</formula>
    <label>Autodesk Contract Manager Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>