unpackaged/main/default/objects/Account/fields/AutodeskContractManagerPhone__c.field-meta.xml
<CustomField>
    <fullName>AutodeskContractManagerPhone__c</fullName>
    <formula>AutodeskContractManager__r.Phone</formula>
    <label>Autodesk Contract Manager Phone</label>
    <type>Text</type>
</CustomField>