unpackaged/main/default/objects/Account/fields/AutodeskEPS__c.field-meta.xml
<CustomField>
    <fullName>AutodeskEPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autodesk EPS</label>
    <type>Checkbox</type>
</CustomField>