unpackaged/main/default/objects/Account/fields/AutodeskParentNamedAccountGroup__c.field-meta.xml
<CustomField>
    <fullName>AutodeskParentNamedAccountGroup__c</fullName>
    <label>Parent Named Account Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Major account</fullName>
            </value>
            <value>
                <fullName>Major – Global</fullName>
            </value>
            <value>
                <fullName>Industry Targeted Account</fullName>
            </value>
            <value>
                <fullName>Emerging Strategic Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>