unpackaged/main/default/objects/Account/fields/AutoSupport_Allowance__c.field-meta.xml
<CustomField>
    <fullName>AutoSupport_Allowance__c</fullName>
    <label>Support Allowance</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.SolutionType__c</field>
        <operation>equals</operation>
        <value>Content Creation Support Allowance</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>