unpackaged/main/default/objects/Account/fields/AutoSupport_Opportunities_inc_open__c.field-meta.xml
<CustomField>
    <fullName>AutoSupport_Opportunities_inc_open__c</fullName>
    <label>Support Opportunities (inc open)</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.SolutionType__c</field>
        <operation>equals</operation>
        <value>Content Creation Support Child Opportunity</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>