unpackaged/main/default/objects/Account/fields/AutoSupport_Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>AutoSupport_Remaining_Amount__c</fullName>
    <formula>AutoSupport_Allowance__c -  AutoSupport_Opportunities_Won__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>