unpackaged/main/default/objects/Account/fields/BES_200_Cockpit_Systems__c.field-meta.xml
<CustomField>
    <fullName>BES_200_Cockpit_Systems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BES_200 - Cockpit Systems</label>
    <type>Checkbox</type>
</CustomField>