unpackaged/main/default/objects/Account/fields/BES_202_Seats_Complete__c.field-meta.xml
<CustomField>
    <fullName>BES_202_Seats_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BES_202 - Seats Complete</label>
    <type>Checkbox</type>
</CustomField>