unpackaged/main/default/objects/Account/fields/BES_205_Climate_Control_Systems__c.field-meta.xml
<CustomField>
    <fullName>BES_205_Climate_Control_Systems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BES_205 - Climate Control Systems</label>
    <type>Checkbox</type>
</CustomField>