unpackaged/main/default/objects/Account/fields/BES_206_Seats_Structure__c.field-meta.xml
<CustomField>
    <fullName>BES_206_Seats_Structure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BES_206 - Seats Structure</label>
    <type>Checkbox</type>
</CustomField>