unpackaged/main/default/objects/Account/fields/BES_210_Cabin_Safety_Systems__c.field-meta.xml
<CustomField>
    <fullName>BES_210_Cabin_Safety_Systems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BES_210 - Cabin &amp; Safety Systems</label>
    <type>Checkbox</type>
</CustomField>