unpackaged/main/default/objects/Account/fields/BES_301_Exterior_Trim__c.field-meta.xml
<CustomField>
    <fullName>BES_301_Exterior_Trim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BES_301 - Exterior Trim</label>
    <type>Checkbox</type>
</CustomField>