unpackaged/main/default/objects/Account/fields/BES_302_Body_Lids__c.field-meta.xml
<CustomField>
    <fullName>BES_302_Body_Lids__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BES_302 - Body Lids</label>
    <type>Checkbox</type>
</CustomField>