unpackaged/main/default/objects/Account/fields/BES_303_Body_Doors__c.field-meta.xml
<CustomField>
    <fullName>BES_303_Body_Doors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BES_303 - Body Doors</label>
    <type>Checkbox</type>
</CustomField>