unpackaged/main/default/objects/Account/fields/BES_305_Glazing_and_Roofs__c.field-meta.xml
<CustomField>
    <fullName>BES_305_Glazing_and_Roofs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BES_305 - Glazing and Roofs</label>
    <type>Checkbox</type>
</CustomField>