unpackaged/main/default/objects/Account/fields/BES_401_Body_Structure__c.field-meta.xml
<CustomField>
    <fullName>BES_401_Body_Structure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BES_401 - Body Structure</label>
    <type>Checkbox</type>
</CustomField>