unpackaged/main/default/objects/Account/fields/Billing_Contact_Email_address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email_address__c</fullName>
    <label>Billing Contact Email address</label>
    <type>Email</type>
</CustomField>