unpackaged/main/default/objects/Account/fields/BillingInstructions__c.field-meta.xml
<CustomField>
    <fullName>BillingInstructions__c</fullName>
    <label>Special Billing Instructions</label>
    <type>TextArea</type>
</CustomField>