unpackaged/main/default/objects/Account/fields/BlogURL__c.field-meta.xml
<CustomField>
    <fullName>BlogURL__c</fullName>
    <label>Blog</label>
    <type>Url</type>
</CustomField>