unpackaged/main/default/objects/Account/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Body</label>
    <type>Checkbox</type>
</CustomField>