unpackaged/main/default/objects/Account/fields/Brand_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Brand_Coverage__c</fullName>
    <label>Brand Coverage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CATIA</fullName>
            </value>
            <value>
                <fullName>ENOVIA</fullName>
            </value>
            <value>
                <fullName>PLATFORM</fullName>
            </value>
            <value>
                <fullName>SIMULIA</fullName>
            </value>
            <value>
                <fullName>WIDGET</fullName>
            </value>
            <value>
                <fullName>DELMIA</fullName>
            </value>
            <value>
                <fullName>SIMA</fullName>
            </value>
            <value>
                <fullName>ENOVIA MATRIXONE</fullName>
            </value>
            <value>
                <fullName>ENOVIA  SMARTEAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>