unpackaged/main/default/objects/Account/fields/Bucket_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Amount__c</fullName>
    <label>Bucket Amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.SolutionType__c</field>
        <operation>equals</operation>
        <value>Content Creation Drawdown Contract</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>