unpackaged/main/default/objects/Account/fields/Business_Advantage_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Advantage_Record_ID__c</fullName>
    <label>Business Advantage Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>