unpackaged/main/default/objects/Account/fields/CADRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>CADRenewalDate__c</fullName>
    <label>CAD Renewal Date</label>
    <type>Date</type>
</CustomField>