unpackaged/main/default/objects/Account/fields/CADResellerName__c.field-meta.xml
<CustomField>
    <fullName>CADResellerName__c</fullName>
    <label>CAD Reseller Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>