unpackaged/main/default/objects/Account/fields/CADSystems__c.field-meta.xml
<CustomField>
    <fullName>CADSystems__c</fullName>
    <label>CAD Systems Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SolidWorks</fullName>
            </value>
            <value>
                <fullName>Inventor</fullName>
            </value>
            <value>
                <fullName>SolidEdge</fullName>
            </value>
            <value>
                <fullName>Creo/ProE/Wildfire</fullName>
            </value>
            <value>
                <fullName>AutoCAD</fullName>
            </value>
            <value>
                <fullName>AutoCAD LT</fullName>
            </value>
            <value>
                <fullName>CATIA</fullName>
            </value>
            <value>
                <fullName>NX</fullName>
            </value>
            <value>
                <fullName>Alias</fullName>
            </value>
            <value>
                <fullName>MicroStation</fullName>
            </value>
            <value>
                <fullName>Freeform</fullName>
            </value>
            <value>
                <fullName>Geomagic</fullName>
            </value>
            <value>
                <fullName>ICEM Surf</fullName>
            </value>
            <value>
                <fullName>KeyShot</fullName>
            </value>
            <value>
                <fullName>Maya/3ds Max</fullName>
            </value>
            <value>
                <fullName>Revit</fullName>
            </value>
            <value>
                <fullName>Rhino</fullName>
            </value>
            <value>
                <fullName>SpaceClaim</fullName>
            </value>
            <value>
                <fullName>VRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>