unpackaged/main/default/objects/Account/fields/CaseReportLinks__c.field-meta.xml
<CustomField>
    <fullName>CaseReportLinks__c</fullName>
    <formula>HYPERLINK("/00Ow00000052Jpd?pv0="+Id, "Cases by Contact Previous CQ") + BR() +
HYPERLINK("/00Ow00000052Jqq?pv0="+Id, "Cases by Priority Previous CQ") + BR() +
HYPERLINK("/00Ow00000052JrK?pv0="+Id, "Cases by Status Previous CQ") + BR() +
HYPERLINK("/00Ow00000052JrZ?pv0="+Id, "All Cases Previous CQ") + BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Reports</label>
    <type>Text</type>
</CustomField>