unpackaged/main/default/objects/Account/fields/CATIA_PLM_Express_Seats__c.field-meta.xml
<CustomField>
    <fullName>CATIA_PLM_Express_Seats__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CATIA PLM Express Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>