unpackaged/main/default/objects/Account/fields/CC_Asigned_to__c.field-meta.xml
<CustomField>
    <fullName>CC_Asigned_to__c</fullName>
    <label>CC Assigned</label>
    <length>100</length>
    <type>Text</type>
</CustomField>