unpackaged/main/default/objects/Account/fields/CEE_V5_Seats__c.field-meta.xml
<CustomField>
    <fullName>CEE_V5_Seats__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CEE V5 Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>