unpackaged/main/default/objects/Account/fields/CEO_Managing_Director__c.field-meta.xml
<CustomField>
    <fullName>CEO_Managing_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEO/Managing Director</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (CEO/Managing Director)</relationshipLabel>
    <relationshipName>AccountswgKs</relationshipName>
    <type>Lookup</type>
</CustomField>