unpackaged/main/default/objects/Account/fields/CES_210_Springs_Dampers_Anti_roll__c.field-meta.xml
<CustomField>
    <fullName>CES_210_Springs_Dampers_Anti_roll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CES_210 - Springs, Dampers, Anti-roll &amp;</label>
    <type>Checkbox</type>
</CustomField>