unpackaged/main/default/objects/Account/fields/CES_330_Suspension_Frames_Powertrai__c.field-meta.xml
<CustomField>
    <fullName>CES_330_Suspension_Frames_Powertrai__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CES_330 - Suspension, Frames &amp; Powertrai</label>
    <type>Checkbox</type>
</CustomField>