unpackaged/main/default/objects/Account/fields/CES_510_Steering_Wheels_Tyres__c.field-meta.xml
<CustomField>
    <fullName>CES_510_Steering_Wheels_Tyres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CES_510 - Steering, Wheels &amp; Tyres</label>
    <type>Checkbox</type>
</CustomField>