unpackaged/main/default/objects/Account/fields/CES_700_Brakes__c.field-meta.xml
<CustomField>
    <fullName>CES_700_Brakes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CES_700 - Brakes</label>
    <type>Checkbox</type>
</CustomField>