unpackaged/main/default/objects/Account/fields/Chassis__c.field-meta.xml
<CustomField>
    <fullName>Chassis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chassis</label>
    <type>Checkbox</type>
</CustomField>