unpackaged/main/default/objects/Account/fields/Cherry__c.field-meta.xml
<CustomField>
    <fullName>Cherry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cherry</label>
    <type>Checkbox</type>
</CustomField>