unpackaged/main/default/objects/Account/fields/Child_Opportunites_Won__c.field-meta.xml
<CustomField>
    <fullName>Child_Opportunites_Won__c</fullName>
    <label>Child Opportunites (Won)</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.SolutionType__c</field>
        <operation>equals</operation>
        <value>Content Creation Child Opportunity, , Content Creation Support Allowance</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Order In - Processing, Order In - Processed</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>