unpackaged/main/default/objects/Account/fields/Child_Opportunities_incl_open__c.field-meta.xml
<CustomField>
    <fullName>Child_Opportunities_incl_open__c</fullName>
    <label>Child Opportunities (incl. open)</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.SolutionType__c</field>
        <operation>equals</operation>
        <value>Content Creation Child Opportunity, , Content Creation Support Allowance</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Order Lost / Disengaged</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>