unpackaged/main/default/objects/Account/fields/ChildSites__c.field-meta.xml
<CustomField>
    <fullName>ChildSites__c</fullName>
    <label>ChildSites</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>