unpackaged/main/default/objects/Account/fields/Closed_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opportunities__c</fullName>
    <label>Closed Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.Probability</field>
        <operation>greaterOrEqual</operation>
        <value>100</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>