unpackaged/main/default/objects/Account/fields/ClosedWonOpportunities__c.field-meta.xml
<CustomField>
    <fullName>ClosedWonOpportunities__c</fullName>
    <description>Opportunities at 90% or above</description>
    <inlineHelpText>Opportunities at 90% or above</inlineHelpText>
    <label>Closed Won Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.Probability</field>
        <operation>greaterOrEqual</operation>
        <value>90</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>