unpackaged/main/default/objects/Account/fields/Company_Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Group_Size__c</fullName>
    <inlineHelpText>Please define the Company Group as follows:

Group 1	&gt;50,000
Group 2	&gt;20,000
Group 3	&gt;5,000
Group 4	&gt;1,000
Group 5	&gt;500
Group 6	&gt;100
Group 7	&gt;50
Group 8	&gt;0</inlineHelpText>
    <label>Company Group Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group 1</fullName>
            </value>
            <value>
                <fullName>Group 2</fullName>
            </value>
            <value>
                <fullName>Group 3</fullName>
            </value>
            <value>
                <fullName>Group 4</fullName>
            </value>
            <value>
                <fullName>Group 5</fullName>
            </value>
            <value>
                <fullName>Group 6</fullName>
            </value>
            <value>
                <fullName>Group 7</fullName>
            </value>
            <value>
                <fullName>Group 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>