unpackaged/main/default/objects/Account/fields/Covisint_Security_Admin__c.field-meta.xml
<CustomField>
    <fullName>Covisint_Security_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Covisint Security Admin</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Covisint Security Admin)</relationshipLabel>
    <relationshipName>Accounts8</relationshipName>
    <type>Lookup</type>
</CustomField>