unpackaged/main/default/objects/Account/fields/CPCasesCompliance__c.field-meta.xml
<CustomField>
    <fullName>CPCasesCompliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance - Cases Approved</label>
    <type>Checkbox</type>
</CustomField>