unpackaged/main/default/objects/Account/fields/CPEnabled__c.field-meta.xml
<CustomField>
    <fullName>CPEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled - Portal Setup</label>
    <type>Checkbox</type>
</CustomField>