unpackaged/main/default/objects/Account/fields/CPSupportContractsCompliance__c.field-meta.xml
<CustomField>
    <fullName>CPSupportContractsCompliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance - Support Contracts Approved</label>
    <type>Checkbox</type>
</CustomField>