unpackaged/main/default/objects/Account/fields/Credit_Limit_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Date__c</fullName>
    <label>Credit Limit Date</label>
    <type>Date</type>
</CustomField>