unpackaged/main/default/objects/Account/fields/Dassault_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dassault Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>