unpackaged/main/default/objects/Account/fields/Dassault_Contract_Manager__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Contract_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Dassault Contract Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Dassault Contract Manager)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>